changed .smaller-news to width in percent instead of px

--- a/index.html
+++ b/index.html
@@ -2,23 +2,86 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Perspective Mag.</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <nav>
-        
-      </nav>
-    </header>
 
+    <header>
+      <div class="logo">
+        <h1 class="P">P.</h1>
+      </div>
+      <div class="title">
+        <h1>Perspective Magazine</h1>
+      </div>
+      <nav>
+        <a href="">News</a>
+        <a href="">Articles</a>
+        <a href="">Interviews</a>
+        <a href="">Gallery</a>
+      </nav>
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </header>
+    
     <section class="big-news">
       <!-- The big news content -->
+      <div>  
+        <img src="/images/lightning.jpg" alt="Dark clouds with lightning">
+        <p class="credit">Photo by Francesc Toldrà from freeimages.com</p>
+      </div>
+      <div>
+        <h2>Extreme weather</h2>
+        <h3>- a historical perspective and the latest research</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem nihil provident ex perspiciatis! Provident qui minima, earum debitis rerum, repellendus voluptates veniam veritatis corrupti recusandae eius similique voluptas? Quod, nihil.</p>
+        <p>Quibusdam illo placeat minus necessitatibus qui voluptatibus odio mollitia expedita voluptatem suscipit vel ex nulla aliquid, molestias inventore corrupti rerum rem dolores?</p>
+      </div>
     </section>
 
-    <section class="">
+    <section class="smaller-news">
       <!-- The other news  -->
+      <div>
+         <img src="images/brain.jpg" alt="A model of a brain">
+         <p class="credit">Photo by Rodrigo Galindo from freeimages.com</p>
+         <h3>The link between sustainability and mental health</h3>
+      </div>
+      <div>
+        <img src="images/engineering.jpg" alt="Female chemical engineer">
+        <p class="credit">Photo by "ThisisEngineering RAEng" from unsplash.com</p>
+        <h3>Inside the lab., developing clean energy storage solutions</h3>
+      </div>
+      <div>
+        <img src="images/space.jpg" alt="Space">
+        <p class="credit">Photo by Jeremy Thomas from unsplash.com</p>
+        <h3>Into the unknown</h3>
+      </div>
+      <div>
+        <img src="images/sea.jpg" alt="Deep sea">
+        <p class="credit">Photo by Mika Brandt from unsplash.com</p>
+        <h3>New species finds on the seabed</h3>
+      </div>
+      <div>
+        <img src="images/brain.jpg" alt="A model of a brain">
+        <p class="credit">Photo by Rodrigo Galindo from freeimages.com</p>
+        <h3>Smaller heading</h3>
+      </div>
+      <div>
+        <img src="images/brain.jpg" alt="A model of a brain">
+        <p class="credit">Photo by Rodrigo Galindo from freeimages.com</p>
+        <h3>Smaller heading</h3>
+      </div>
     </section>
+
+    <footer>
+    </footer>
+
   </body>
 </html>
+
