added meta tag for responsive design

--- a/code/index.html
+++ b/code/index.html
@@ -8,16 +8,48 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
+       <!-- Some kind of logo and navbar -->
+    <header class="Top-container">
+      <h1>Happy News</h1>
+      <img src="logo.svg" alt="Logga">
+      <nav class="navigation-container">
+        <a href="About">About</a>
+        <a href="Search">Search</a>
+        <a href="contact">Contact</a>
+      </nav>
     </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
+      
+    <!-- The big news content -->
+    <section class="big-news-container">
+      <article>
+        <h2>Rubrik</h2>
+        <img src="bild" alt="Bild på en stor nyhet" width="">
+        <p>Liten beskrivning av nyheten</p>
+      </article>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <!-- The other news  -->
+    <section class="small-news-container">
+       
+      <article class="small-news">
+        <h3>Rubrik</h3>
+        <img src="bildlänk" alt="Bild" width="">
+      </article>
+
+      <article class="small-news">
+        <h3>Rubrik</h3>
+        <img src="bildlänk" alt="Bild" width="">
+      </article>
+
+      <article class="small-news">
+        <h3>Rubrik</h3>
+        <img src="bildlänk" alt="Bild" width="">
+      </article>
+
+      <article class="small-news">
+        <h3>Rubrik</h3>
+        <img src="bildlänk" alt="Bild" width="">
+      </article>
     </section>
   </body>
 </html>
