Header with logo, name of newspaper and menu bar

--- a/code/index.html
+++ b/code/index.html
@@ -12,19 +12,32 @@
 
 <body>
 
-
     <header class="header">
         <!-- Logotype and name of site -->
+        <img class="logo" src="./Silhuette-Logotype-with-circle.svg" alt="Logotype">
+        <h1 class="newspaper-name">The Fashionable Update</h1>
+        <nav class="navigation-menu">
+            <div class="navigation-item">HOME</div>
+            <div class="navigation-item">ABOUT</div>
+            <div class="navigation-item">CONTACT</div>
+        </nav>
     </header>
+
+
 
     <section class="big-news">
         <!-- Main news image, heading and text -->
-
+        <div></div>
     </section>
 
     <section class="smaller-news">
         <!-- The other news  -->
-
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     </section>
 
 </body>
