add media queries and some styling

--- a/code/index.html
+++ b/code/index.html
@@ -15,8 +15,8 @@
 
     <img class="logo" src="./logo.svg" alt="Technigo logo" />
 
-    <h1>Latest news in fitness industry</h1>
-    
+    <h1>LATEST NEWS IN FITNESS INDUSTRY</h1>
+
     <nav class="navigation-container">
       <div class="navigation-item"><a href="#">Home</a></div>
       <div class="navigation-item"><a href="#">Main News</a></div>
@@ -26,11 +26,11 @@
 
   </header>
 
-  <section class="big-news">
-    <div class="main-news">
+  <div class="all-news">
+    <section class="big-news">
       <img class="main-image" src="./steps.jpg" alt="Steps image" />
       <article class="article">
-        <h2>some big news title</h2>
+        <h2>TOP 10 Fitness trends for 2021</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id est eu tellus vehicula tincidunt ac
           sed
           nunc. Suspendisse nisl tortor, mattis ut placerat sit amet, dapibus id diam. Aliquam in mollis urna. Nullam
@@ -39,63 +39,64 @@
           pharetra
           augue. Sed mollis felis sagittis, pellentesque elit a, bibendum mi. </p>
       </article>
-    </div>
-  </section>
+    </section>
 
-  <section class="other-news">
+    <section class="other-news">
 
-    <div class="news-card">
-      <img src="./onlinetraining.jpg" alt="Online training image" />
-      <h3>Online training</h3>
-      <a href="#">Read more</a>
-    </div>
+      <div class="news-card">
+        <img src="./onlinetraining.jpg" alt="Online training image" />
+        <h3>Online training</h3>
+        <a href="#">Read more</a>
+      </div>
 
-    <div class="news-card">
-      <img src="./wearable.jpg" alt="" />
-      <h3>Wearable technology</h3>
-    </div>
+      <div class="news-card">
+        <img src="./wearable.jpg" alt="" />
+        <h3>Wearable technology</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./pushup.jpg" alt="" />
-      <h3>Body weight training</h3>
-    </div>
+      <div class="news-card">
+        <img src="./pushup.jpg" alt="" />
+        <h3>Body weight training</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./skiing.jpg" alt="" />
-      <h3>Outdoor activities</h3>
-    </div>
+      <div class="news-card">
+        <img src="./skiing.jpg" alt="" />
+        <h3>Outdoor activities</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./hiit.jpg" alt="" />
-      <h3>High intensity interval training</h3>
-    </div>
+      <div class="news-card">
+        <img src="./hiit.jpg" alt="" />
+        <h3>High intensity interval training</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./virtual.jpg" alt="" />
-      <h3>Virtual training</h3>
-    </div>
+      <div class="news-card">
+        <img src="./virtual.jpg" alt="" />
+        <h3>Virtual training</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./exercisemedicine.jpg" alt="" />
-      <h3>Exercise is medicine</h3>
-    </div>
+      <div class="news-card">
+        <img src="./exercisemedicine.jpg" alt="" />
+        <h3>Exercise is medicine</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./freeweights.jpg" alt="" />
-      <h3>Training with free weights</h3>
-    </div>
+      <div class="news-card">
+        <img src="./freeweights.jpg" alt="" />
+        <h3>Training with free weights</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./older.jpg" alt="" />
-      <h3>Fitness programs for older adults</h3>
-    </div>
+      <div class="news-card">
+        <img src="./older.jpg" alt="" />
+        <h3>Fitness programs for older adults</h3>
+      </div>
 
-    <div class="news-card">
-      <img src="./personaltraining.jpg" alt="" />
-      <h3>Personal training</h3>
-    </div>
+      <div class="news-card">
+        <img src="./personaltraining.jpg" alt="" />
+        <h3>Personal training</h3>
+      </div>
 
-  </section>
+    </section>
+  </div>
+
   <footer>
     <a href="#">Here you can find more information</a>
   </footer>
