--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   <body>
 
     <header>
-      <div class="logo">
-        <h1 class="P">P.</h1>
-      </div>
+      <a href="#">
+        <div class="logo">
+          <h1 class="P">P.</h1>
+        </div>
+      </a>
       <div class="title">
         <h1>Perspective Magazine</h1>
       </div>
@@ -42,6 +44,9 @@
         <h3>- a historical perspective and the latest research</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem nihil provident ex perspiciatis! Provident qui minima, earum debitis rerum, repellendus voluptates veniam veritatis corrupti recusandae eius similique voluptas? Quod, nihil.</p>
         <p>Quibusdam illo placeat minus necessitatibus qui voluptatibus odio mollitia expedita voluptatem suscipit vel ex nulla aliquid, molestias inventore corrupti rerum rem dolores?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, inventore similique!</p>
+        <br>
+        <a href="#"><p>Read the story &#8594;</a>
       </div>
     </section>
 
@@ -50,32 +55,32 @@
       <div>
          <img src="images/brain.jpg" alt="A model of a brain">
          <p class="credit">Photo by Rodrigo Galindo from freeimages.com</p>
-         <h3>The link between sustainability and mental health</h3>
+         <a href="#"><h3>The link between sustainability and mental health</h3></a>
       </div>
       <div>
         <img src="images/engineering.jpg" alt="Female chemical engineer">
         <p class="credit">Photo by "ThisisEngineering RAEng" from unsplash.com</p>
-        <h3>Inside the lab., developing clean energy storage solutions</h3>
+        <a href="#"><h3>Inside the lab., developing clean energy storage solutions</h3></a>
       </div>
       <div>
         <img src="images/space.jpg" alt="Space">
         <p class="credit">Photo by Jeremy Thomas from unsplash.com</p>
-        <h3>Into the unknown</h3>
+        <a href="#"><h3>Into the unknown</h3></a>
       </div>
       <div>
         <img src="images/sea.jpg" alt="Deep sea">
         <p class="credit">Photo by Mika Brandt from unsplash.com</p>
-        <h3>New species finds on the seabed</h3>
+        <a href="#"><h3>New species finds on the seabed</h3></a>
       </div>
       <div>
         <img src="images/brain.jpg" alt="A model of a brain">
         <p class="credit">Photo by Rodrigo Galindo from freeimages.com</p>
-        <h3>Smaller heading</h3>
+        <a href="#"><h3>Smaller heading</h3></a>
       </div>
       <div>
         <img src="images/brain.jpg" alt="A model of a brain">
         <p class="credit">Photo by Rodrigo Galindo from freeimages.com</p>
-        <h3>Smaller heading</h3>
+        <a href="#"><h3>Smaller heading</h3></a>
       </div>
     </section>
 
