--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,7 @@
     />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
-  <body>
+  <body onLoad="getImages();">
     <!-- Fullscreen SideNavbar (default: hidden) -->
     <div id="sideNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -61,6 +61,7 @@
       </nav>
     </header>
 
+    <!-- Featured Articles display via grid -->
     <section id="hero">
       <!-- Featured articles -->
       <article class="large">
@@ -93,68 +94,102 @@
       </article>
     </section>
 
-    <section id="news-mosiac">
+    <!-- Articles displayed in a mosaic pattern (single column in mobile) -->
+    <section id="news-boxes">
       <!-- Main content; Mosaic news -->
-      <article class="mosiac-item">Small</article>
-      <article class="mosiac-item span-2">MEDIUM</article>
-      <article class="mosiac-item">Small</article>
-      <article class="mosiac-item">Small</article>
-      <article class="mosiac-item">Small</article>
-      <article class="mosiac-item">Small</article>
-      <article class="mosiac-item">Small</article>
-      <article class="mosiac-item span-2">MEDIUM</article>
-      <article class="mosiac-item">Small</article>
+
+      <article class="box-item">
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="box-info">
+          <span class="category">Worldwide</span>
+          <h3>Quisque velit nisi</h3>
+          <p>
+            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
+            accumsan tincidunt. Vestibulum ante ip
+          </p>
+        </div>
+      </article>
+      <article class="box-item">
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="box-info">
+          <span class="category">Style</span>
+          <h3>Quisque velit nisi</h3>
+          <p>
+            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
+            accumsan tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+            posuere cubilia
+          </p>
+        </div>
+      </article>
+      <article class="box-item">
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="box-info">
+          <span class="category">Style</span>
+          <h3>Quisque velit nisi</h3>
+          <p>
+            Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla porttitor
+            accumsan tincidunt. Vestibulu
+          </p>
+        </div>
+      </article>
     </section>
 
     <section id="news-column">
       <article class="article-column">
-        <h2>Lorem ipsum dolor sit amet</h2>
+        <h3>Quisque velit nisi</h3>
+        <span class="author">by Jane Doe</span>
+
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
-          ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
-          mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris, quis
-          sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod magna ac
-          lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a nulla
-          placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc ac
-          egestas consequat, odio nibh euismod nulla, eget auctor orci nibh vel nisi. Aliquam erat
-          volutpat. Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus
-          quam, egestas ac tincidunt a, lacinia vel velit. Aenean facilisis nulla vitae urna
-          tincidunt congue sed ut dui. Morbi malesuada nulla nec purus convallis consequat. Vivamus
-          id mollis quam. Morbi ac commodo nulla. In condimentum orci id nisl volutpat bibendum.
-          Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum
-          nunc non neque consectetur quis placerat neque lobortis. Nam vestibulum, arcu sodales
-          feugiat consectetur, nisl orci bibendum elit, eu euismod magna sapien ut nibh. Donec
-          semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
-          pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
-          velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est
-          sed turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum
-          malesuada non vel leo. Sed fringilla porta ligula egestas tincidunt. Nullam risus magna,
-          ornare vitae varius eget, scelerisque a libero. Morbi eu porttitor ipsum. Nullam lorem
-          nisi, posuere quis volutpat eget, luctus nec massa. Pellentesque aliquam lacinia tellus
-          sit amet bibendum. Ut posuere justo in enim pretium scelerisque. Etiam ornare vehicula
-          euismod. Vestibulum at risus augue. Sed non semper dolor. Sed fringilla consequat velit a
-          porta. Pellentesque sed lectus pharetra ipsum ultricies commodo non sit amet velit.
-          Suspendisse volutpat lobortis ipsum, in scelerisque nisi iaculis a. Duis pulvinar lacinia
-          commodo. Integer in lorem id nibh luctus aliquam. Sed elementum, est ac sagittis
-          porttitor, neque metus ultricies ante, in accumsan. Curabitur vulputate, ligula lacinia
-          scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class
-          aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed
-          molestie augue sit amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus
-          orci luctus et ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et
-          magna. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed
-          urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu
-          diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna diam porttitor mauris,
-          quis sollicitudin sapien justo in libero. Vestibulum mollis mauris enim. Morbi euismod
-          magna ac lorem rutrum elementum. Donec viverra auctor lobortis. Pellentesque eu est a
-          nulla placerat dignissim. Morbi a enim in magna semper bibendum. Etiam scelerisque, nunc
-          ac egestas consequat, odio nibh euismod nulla, eget auctor orci nibh vel nisi. Aliquam
-          erat volutpat. Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque
-          lacus quam, egestas ac tincidunt a, lacinia vel velit. Aenean facilisis nulla vitae urna
-          tincidunt congue sed ut dui. Morbi malesuada nulla nec purus convallis consequat. Vivamus
-          id mollis quam. Morbi ac commodo nulla. In condimentum orci id nisl volutpat bibendum.
-          Quisque commodo hendrerit lorem.
+          Donec viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a
+          enim in magna semper bibendum. Etiam scelerisque, nunc ac egestas consequat, odio nibh
+          euismod nulla, eget auctor orci nibh vel nisi. Aliquam erat volutpat. Mauris vel neque sit
+          amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a,
+          lacinia vel velit. Aenean facilisis nulla vitae urna tincidunt congue sed ut dui. Morbi
+          malesuada nulla nec purus convallis consequat. Vivamus id mollis quam. Morbi ac commodo
+          nulla. In condimentum orci id nisl volutpat bibendum. Quisque commodo hendrerit lorem quis
+          egestas. Maecenas quis tortor arcu.
         </p>
-        <button>Read more</button>
+        <p>
+          Sed porttitor lectus nibh. Curabitur aliquet quam id dui posuere blandit. Vestibulum ac
+          diam sit amet quam vehicula elementum sed sit amet dui. Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+          Vivamus suscipit tortor eget felis porttitor volutpat.
+        </p>
+        <p>
+          Vivamus rutrum nunc non neque consectetur quis placerat neque lobortis. Nam vestibulum,
+          arcu sodales feugiat consectetur, nisl orci bibendum elit, eu euismod magna sapien ut
+          nibh. Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea
+          dictumst. Nam pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat
+          purus metus eu velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien.
+          Phasellus quis est sed turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu
+          eros interdum malesuada non vel leo. Sed fringilla porta ligula egestas tincidunt. Nullam
+          risus magna, ornare vitae varius eget, scelerisque a libero. Morbi eu porttitor ipsum.
+          Nullam lorem nisi, posuere quis volutpat eget, luctus nec massa. Pellentesque aliquam
+          lacinia tellus sit amet bibendum. Ut posuere justo in enim pretium scelerisque. Etiam
+          ornare vehicula euismod. Vestibulum at risus augue. Sed non semper dolor. Sed fringilla
+          consequat velit a porta. Pellentesque sed lectus pharetra ipsum ultricies commodo non sit
+          amet velit. Suspendisse volutpat lobortis ipsum, in scelerisque nisi iaculis a. Duis
+          pulvinar lacinia commodo. Integer in lorem id nibh luctus aliquam. Sed elementum, est ac
+          sagittis porttitor, neque metus ultricies ante, in accumsan.
+        </p>
+        <p>
+          Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac
+          egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per
+          conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo consequat posuere.
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+          Proin vel ante a orci tempus eleifend ut et magna. Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In
+          condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac
+          euismod semper, magna diam porttitor mauris, quis sollicitudin sapien justo in libero.
+          Vestibulum mollis mauris enim. Morbi euismod magna ac lorem rutrum elementum. Donec
+          viverra auctor lobortis. Pellentesque eu est a nulla placerat dignissim. Morbi a enim in
+          magna semper bibendum. Etiam scelerisque, nunc ac egestas consequat, odio nibh euismod
+          nulla, eget auctor orci nibh vel nisi. Aliquam erat volutpat. Mauris vel neque sit amet
+          nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt a,
+          lacinia vel velit. Aenean facilisis nulla vitae urna tincidunt congue sed ut dui. Morbi
+          malesuada nulla nec purus convallis consequat. Vivamus id mollis quam. Morbi ac commodo
+          nulla. In condimentum orci id nisl volutpat bibendum. Quisque commodo hendrerit lorem.
+        </p>
       </article>
     </section>
 
@@ -214,12 +249,21 @@
     </footer>
   </body>
   <script>
-    function openNav() {
+    const openNav = () => {
       document.getElementById("sideNav").style.display = "block";
-    }
+    };
 
-    function closeNav() {
+    const closeNav = () => {
       document.getElementById("sideNav").style.display = "none";
-    }
+    };
+
+    // Gets random images from an unsplash collection for each article image element
+    const getImages = () => {
+      let imageElements = document.getElementsByClassName("article-image");
+      for (let i = 0; i < imageElements.length; i++) {
+        const el = imageElements[i];
+        el.style.backgroundImage = `url(https://source.unsplash.com/collection/3150958/?${i})`;
+      }
+    };
   </script>
 </html>
