--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;500&display=swap" rel="stylesheet">
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+  <link rel="stylesheet" href="style.css">
+  <title>My projects</title>
+</head>
+<body>
+  <header class="header">
+    <img class="logo" src="logo.png" alt="website-logo">
+    <nav class="nav-container">
+      <div class="nav-item" href="">HOME</div>
+      <div class="nav-item" href="">DESTINATIONS</div>
+      <div class="nav-item" href="">CULTURE</div>
+      <div class="nav-item" href="">TRICKS & TIPS</div>
+    </nav>
+  </header>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <section class="big-news">
+    <img src="images/camper.jpg" alt="">
+    <div class="big-news-text">
+    <h1>THE BIGGEST NEWS</h1>
+    <p>Changing traveling habbets in 2021 is a serious desigion. Have you already tought about it?</p>
+  </div>
+  </section>
+
+  <section class="news-card-section">  
+    <div class="news-card">
+      <img src="images/photo.jpg" alt="">
+      <h2>First news of the whole world</h2>
+    </div>
+    <div class="news-card"><img src="images/airport.jpg" alt="">
+      <h2>First news of the whole world</h2>
+    </div>
+    <div class="news-card"><img src="images/freedom.jpg" alt="">
+      <h2>First news of the whole world</h2>
+    </div>
+    <div class="news-card"><img src="images/mountains.jpg" alt="">
+      <h2>First news of the whole world</h2>
+    </div>
+    <div class="news-card"><img src="images/plane.jpg" alt="">
+      <h2>First news of the whole world</h2>
+    </div>
+    <div class="news-card"><img src="images/boys.jpg" alt="">
+      <h2>First news of the whole world</h2>
+    </div>
+    <div class="news-card"><img src="images/santorini.jpg" alt="">
+      <h2>First news of the whole world</h2>
+    </div>
+  </section>
+  
+</body>
 </html>
