added a new logo

--- a/code/index.html
+++ b/code/index.html
@@ -32,8 +32,8 @@
           <img src="images\SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk On Woman">
       </a>
       <div>
-          <h2>Fresh Out the Box</h2>
-          <p>2021, January 06 - Three versions of the Nike Dunk released. They comoe in the colorways ofblack/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
+          <h2>Fresh Out of the Box</h2>
+          <p>2021, January 06 - Three versions of the Nike Dunk released. They come in the colorways of black/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
           </p>
       </div>
     </section>
