Added different flexbox layout for the header in tablet and desktop view. Added classes to header in html in order to style them in css.

--- a/code/index.html
+++ b/code/index.html
@@ -16,12 +16,13 @@
           <div></div>
         </a>
       </div>
-        <img src="./photos/dentnews.png" alt="Dentnews logo">
+        <img class="logo-1" src="./photos/dentnews.png" alt="Dentnews logo">
         <nav class="navigation-container">
-          <a href="./article1.html">BREAKING NEWS</a> 
-          <a href="./about.html">ABOUT US</a> 
-          <a href="./subscribe.html">SUBSCRIBE</a>
-          <a href="./contact.html">CONTACT</a> 
+          <div class="navigation-element-left"><a href="./article1.html">BREAKING NEWS</a></div>
+          <div class="navigation-element-left"><a href="./about.html">ABOUT US</a></div>
+          <img class="logo-2" src="./photos/dentnews.png" alt="Dentnews logo">
+          <div class="navigation-element-right"><a href="./subscribe.html">SUBSCRIBE</a></div>
+          <div class="navigation-element-right"><a href="./contact.html">CONTACT</a></div>
         </nav>
     </header>
 
