final content added, ready for testing

--- a/code/index.html
+++ b/code/index.html
@@ -196,56 +196,106 @@
     <section id="news-list">
       <!-- Extra Content; List of other news -->
       <article class="article-list">
-        <h2>Lorem Ipsum</h2>
-        <p>
-          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-          ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies
-          ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
-        </p>
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="list-info">
+          <h3>Lorem Ipsum</h3>
+          <span class="category">Worldwide</span>
+          <p>
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            mattis…
+          </p>
+        </div>
       </article>
       <article class="article-list">
-        <h2>Lorem Ipsum</h2>
-        <p>
-          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-          ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies
-          ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
-        </p>
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="list-info">
+          <h3>Lorem Ipsum</h3>
+          <span class="category">Style</span>
+          <p>
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            mattis…
+          </p>
+        </div>
       </article>
       <article class="article-list">
-        <h2>Lorem Ipsum</h2>
-        <p>
-          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-          ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies
-          ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
-        </p>
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="list-info">
+          <h3>Lorem Ipsum</h3>
+          <span class="category">Worldwide</span>
+          <p>
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            mattis…
+          </p>
+        </div>
       </article>
       <article class="article-list">
-        <h2>Lorem Ipsum</h2>
-        <p>
-          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-          ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies
-          ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
-        </p>
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="list-info">
+          <h3>Lorem Ipsum</h3>
+          <span class="category">Style</span>
+          <p>
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            mattis…
+          </p>
+        </div>
       </article>
       <article class="article-list">
-        <h2>Lorem Ipsum</h2>
-        <p>
-          Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
-          ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
-          ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies
-          ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis…
-        </p>
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="list-info">
+          <h3>Lorem Ipsum</h3>
+          <span class="category">Entertainment</span>
+          <p>
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            mattis…
+          </p>
+        </div>
+      </article>
+      <article class="article-list">
+        <a class="article-image center-box-image" href="#"></a>
+        <div class="list-info">
+          <h3>Lorem Ipsum</h3>
+          <span class="category">Travel</span>
+          <p>
+            Amet leo consequat posuere. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia Curae; Proin vel ante a orci tempus eleifend ut et magna. Lorem
+            ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna
+            ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam
+            mattis…
+          </p>
+        </div>
       </article>
     </section>
 
     <footer>
       <!-- Links in 2 columns -->
-      <div class="footer-links">LEFT SIDE LINKS</div>
-      <div class="footer-links">RIGHT SIDE LINKS</div>
+      <div class="footer-links">
+        <h4>Other Sites</h4>
+        <a href="#">This Cool Site</a>
+        <a href="#">Super awsome news site</a>
+        <a href="#">Whatever</a>
+        <a href="#">Site Name</a>
+      </div>
+      <div class="footer-links">
+        <h4>Contact Info</h4>
+        <a href="#">About Us</a>
+        <a href="#">Customer Support</a>
+        <a href="#">Other</a>
+      </div>
     </footer>
   </body>
   <script>
