--- a/code/index.html
+++ b/code/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
   <title>My projects</title>
@@ -14,43 +15,44 @@
   <header class="header">
     <img class="logo" src="logo.png" alt="website-logo">
     <nav class="nav-container">
-      <div class="nav-item" href="">HOME</div>
-      <div class="nav-item" href="">DESTINATIONS</div>
-      <div class="nav-item" href="">CULTURE</div>
-      <div class="nav-item" href="">TRICKS & TIPS</div>
+      <a class="nav-item" href="">HOME</a>
+      <a class="nav-item" href="">DESTINATIONS</a>
+      <a class="nav-item" href="">CULTURE</a>
+      <a class="nav-item" href="">TRICKS & TIPS</a>
     </nav>
   </header>
 
   <section class="big-news">
     <img src="images/camper.jpg" alt="">
     <div class="big-news-text">
-    <h1>THE BIGGEST NEWS</h1>
-    <p>Changing traveling habbets in 2021 is a serious desigion. Have you already tought about it?</p>
+    <h1>2020 was the year of the campervan</h1>
+    <p>2020 was the year of the campervan – but could 2021 be even busier, as people now see them as 'the safe way to travel'?</p>
+    <button class="btn" type="button">Read more</button>
   </div>
   </section>
 
   <section class="news-card-section">  
     <div class="news-card">
       <img src="images/photo.jpg" alt="">
-      <h2>First news of the whole world</h2>
+      <h2>Winners of 2020's Travel Photo of the Year Awards</h2>
     </div>
     <div class="news-card"><img src="images/airport.jpg" alt="">
-      <h2>First news of the whole world</h2>
+      <h2>'I've Missed My Flight!' Here's what To Do</h2>
     </div>
     <div class="news-card"><img src="images/freedom.jpg" alt="">
-      <h2>First news of the whole world</h2>
+      <h2>The Reality of the American Dream by travel blogger Kelly Clark</h2>
     </div>
     <div class="news-card"><img src="images/mountains.jpg" alt="">
-      <h2>First news of the whole world</h2>
+      <h2>The 12 most beautiful mountains in the world</h2>
     </div>
     <div class="news-card"><img src="images/plane.jpg" alt="">
-      <h2>First news of the whole world</h2>
+      <h2>How to Book the Cheapest Flight Possible to Anywhere</h2>
     </div>
     <div class="news-card"><img src="images/boys.jpg" alt="">
-      <h2>First news of the whole world</h2>
+      <h2>The improbable rise and fall of Couchsurfing</h2>
     </div>
     <div class="news-card"><img src="images/santorini.jpg" alt="">
-      <h2>First news of the whole world</h2>
+      <h2>Greece Travel Info & Tips: All you need to know</h2>
     </div>
   </section>
   
