--- a/code/index.html
+++ b/code/index.html
@@ -15,6 +15,7 @@
           <div></div>
           <div></div>
           <div></div>
+          <div></div>
       </div>
       <img class="logo" src="images\sneaker-logo_new.png" alt="Header Logo">
       <h3>Sneakers & News</h3>
@@ -29,11 +30,11 @@
   <section class="big-news-container">
     <section class="container">
       <a href="https://news.nike.com/content/nike-sportswear-dunk-spring-2021">
-          <img src="images\SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk On Woman">
+          <img src="images\SP21_Nike_Sportswear_Dunk_23_native_1600.jpg" alt="Nike Dunk Black">
       </a>
       <div>
-          <h2>Fresh Out of the Box</h2>
-          <p>2021, January 06 - Three versions of the Nike Dunk released. They come in the colorways of black/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
+          <h2>Fresh Out the Box</h2>
+          <p>2021, January 06 - Three versions of the Nike Dunk released. They come in the colorways ofblack/white, red/grey and sail/coast. Arriving in spring 2021 to bring a new perspective of the Dunks iconic color-blocking.
           </p>
       </div>
     </section>
