--- a/code/index.html
+++ b/code/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>World News by Ekaterina Klimenko</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -87,24 +88,34 @@
           </div>
         </div>
       </section>
-    <footer>
-      <div class="about-us">
-        <h4>About us</h4>
-        <ul>
-          <li><a href="">Contact information</a></li>
-          <li><a href="">History</a></li>
-          <li><a href="">Privacy Policy</a></li>
-          <li><a href="">Coockies</a></li>
-        </ul>
+    <footer class="footer-general">
+      <div class="footer-column">
+        <img src="./Arctic-Logo.png" class="logo-footer" alt="Logo">
+        <div class="somedia-buttons">
+          <a href="" class="fa fa-facebook"></a>
+          <a href="" class="fa fa-twitter"></a>
+          <a href="" class="fa fa-linkedin"></a>
+          <a href="" class="fa fa-instagram"></a>
+        </div>
+        <button class="subscribe-button">Subscribe to our newsletter</button>
+      </div> 
+      <div class="footer-column">
+        <h4 class="footer-headline">About us</h4>
+        <div class="footer-list">
+          <a class="footer-link" href="">Contact information</a>
+          <a class="footer-link" href="">History</a>
+          <a class="footer-link" href="">Privacy Policy</a>
+          <a class="footer-link" href="">Coockies</a>
+        </div>
       </div>
-      <div class="about-us">
-        <h4>About us</h4>
-        <ul>
-          <li><a href="">Contact information</a></li>
-          <li><a href="">History</a></li>
-          <li><a href="">Privacy Policy</a></li>
-          <li><a href="">Coockies</a></li>
-        </ul>
+      <div class="footer-column">
+        <h4 class="footer-headline">Explore Arctic News</h4>
+        <div class="footer-list">
+          <a class="footer-link" href="">Arctic shipping</a>
+          <a class="footer-link" href="">Arctic Coomunities</a>
+          <a class="footer-link" href="">Oil and Gas</a>
+          <a class="footer-link" href="">Climate and environment</a>
+        </div>
       </div>
    
     </footer>
