--- a/code/index.html
+++ b/code/index.html
@@ -41,7 +41,7 @@
           <img src="./img/pancake-1984712_1280.jpg" alt="pankcake">
             <div>
             <h2>The winner from last year - Café Mignon!</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laboriosam dolorum et! Est alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis mollitia? <br</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laboriosam dolorum et! Est alias quam esse ducimus aliquid tempore at error libero iure magni odio, optio blanditiis molitia? <br</p>
           </div>
         </div>
         
