header styling navigation element positioning

--- a/code/index.html
+++ b/code/index.html
@@ -9,17 +9,23 @@
 </head>
 
 <body>
+  <!-- logo and navbar -->
   <header class="header">
-    <!-- logo and navbar -->
-    <img class="logo" src="./news.svg" alt="logo">
-    <nav class="navigation-container">
-      <div class="nav-item">Articles</div>
-      <div class="nav-item">Magazine</div>
-      <div class="nav-item">About</div>
-      <div class="nav-item">Contact</div>
+    <nav class="nav">
+      <div class="navigation-container">
+        <img class="logo" src="./news.svg" alt="logo">
+      </div>
+      <div class="navigation-container">
+        <div class="nav-item">Articles</div>
+        <div class="nav-item">Magazine</div>
+      </div>
+      <div class="navigation-container">
+        <div class="nav-item">About</div>
+        <div class="nav-item">Contact</div>
+      </div>
     </nav>
   </header>
-  <main class="main-container">
+  <main>
     <!-- big news section -->
     <section class="big-news-container">
       <div class="big-news-img">
@@ -30,10 +36,10 @@
         <button class="button">Read more</button>
       </div>
     </section>
-    <!-- recent news section -->
-    <section class="recent-news-container">
+    <!-- smal news section -->
+    <section class="smal-news-container">
       <div>
-        <div class="recent-news-heading">
+        <div class="smal-news-heading">
           <h1>Recent news</h1>
         </div>
         <div class="news-card-container">
@@ -64,12 +70,10 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="credit">
+    <div class="author-container">
       <p>Icons made by </p>
       <a href="https://www.freepik.com" title="Freepik">Freepik</a>
       <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-    </div>
-    <div class="author">
       <p>Web design by Felicia Liabäck Löwstett 2021</p>
     </div>
   </footer>
