added classes in h1,img,nav and link tags

--- a/code/index.html
+++ b/code/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
        <!-- Some kind of logo and navbar -->
-    <header class="Top-container">
-      <h1>Happy News</h1>
-      <img src="logo.svg" alt="Logga">
-      <nav class="navigation-container">
-        <a href="About">About</a>
-        <a href="Search">Search</a>
-        <a href="contact">Contact</a>
+    <header class="header-container">
+      <h1 class="Top-title">Happy News</h1>
+      <img class="logo" src="logo.svg" alt="Logga">
+      <nav class="nav-container">
+        <a class="nav-link" href="About">About</a>
+        <a class="nav-link" href="Search">Search</a>
+        <a class="nav-link" href="contact">Contact</a>
       </nav>
     </header>
       
