header styling navigation posistion mobile device

--- a/code/index.html
+++ b/code/index.html
@@ -12,7 +12,7 @@
   <!-- logo and navbar -->
   <header class="header">
     <nav class="nav">
-      <div class="navigation-container">
+      <div class="navigation-container-logo">
         <img class="logo" src="./news.svg" alt="logo">
       </div>
       <div class="navigation-container">
