--- a/code/login.html
+++ b/code/login.html
@@ -8,26 +8,42 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 
-<nav class="nav">
-  <input type="checkbox" id="checkbox">
-  <label for="checkbox"><a class="menu-button"></a>
-  </label>
-  <div class="menu-content">
-    <a href="contacts.html" target="blank">contact</a>
-    <a href="about.html" target="blank">about</a>
-    <a href="signup.html" target="blank">sign up</a>
-    <a href="index.html" target="blank">home</a>
-  </div>
-  <div class="search-content">
-    <input type="checkbox" id="searchbox">
-    <label for="searchbox">
-      <img class="search-button" src="../pictures/magnify.png">
-    </label>
-    <div class="searchbar">
-      <input type="text" placeholder="Search..">
-    </div>
-  </div>
-</nav>
+<header class="simple-header">  
+  <nav class="nav">
+      <input type="checkbox" id="checkbox">
+      <label for="checkbox"><a class="menu-button"></a>
+      </label>
+      <div class="menu-content">
+          <a href="contacts.html" target="blank">contact</a>
+          <a href="about.html" target="blank">about</a>
+          <a href="index.html" target="blank">home</a>
+          <a href="login.html" target="blank">login</a>
+      </div>
+      <div class="search-content">
+          <input type="checkbox" id="searchbox">
+          <label for="searchbox">
+              <img class="search-button" src="../pictures/magnify.png">
+          </label>
+          <div class="searchbar">
+              <input type="text" placeholder="Search..">
+          </div>
+      </div>
+  </nav>
+  <div class="logo"><img src="../pictures/logo_space.svg"></div>
+  <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
+  </header>
+
+<section class="form-section">
+  <form class="form">
+      <h2>LOGIN</h2>
+      <h3>Don't got an account?</h3> <a href="signup.html">Sign up!</a><br><br><br>
+      <label for="username">Username:</label><br>
+      <input type="text" id="username" name="username"><br>
+      <label for="password">Password:</label><br>
+      <input type="password" id="password" name="password"><br>
+      <input type="submit" value="Login">
+  </form>
+</section>
 
 <footer class="footer">
   <div class="footer-wrapper">
