--- a/code/signup.html
+++ b/code/signup.html
@@ -33,16 +33,20 @@
 <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
 </header>
 
-<section class="signup">
-    <form class="signup-form">
+<section class="form-section">
+    <form class="form">
         <h2>SIGN UP!</h2>
-        <h3> Get acess to our news letter.</h3><br><br><br>
+        <h3> With a login you will be able to comstumize content and notifications.</h3><br><br><br>
         <label for="first_name">First name:</label><br>
         <input type="text" id="first_name" name="first_name"><br>
         <label for="last_name">Last name:</label><br>
         <input type="text" id="last_name" name="last_name"><br>
         <label for="email">E-mail:</label><br>
         <input type="email" id="email" name="email"><br><br>
+        <label for="username">Choose a username:</label><br>
+        <input type="text" id="username" name="username"><br>
+        <label for="password">Choose a password:</label><br>
+        <input type="password" id="password" name="password"><br>
         <input type="submit" value="Submit">
     </form>
 </section>
