--- a/code/index.html
+++ b/code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>World News by Ekaterina Klimenko</title>
+    <title>Arctic News by Ekaterina Klimenko</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +11,9 @@
   </head>
   <body>
     
-      <header class="header-general">
-        <!-- Logo, hamburger menu and navbar -->
-        <div class="header-phone">
+    <header class="header-general">
+      <!-- Header phone: hamburger menu and dropdown navbar -->
+      <div class="header-phone">
           <img src="./Arctic-Logo.png" class="logo" alt="Arctic News">
           <div class="checkbox">
             <input type="checkbox" id="hamburger">
@@ -31,8 +31,19 @@
               <div class="hamburger-line"></div>
             </label>
           </div>
-        </div>
-        <div class= "header-desktop">
+      </div>
+      <!-- Header tablet: logo in the middle, navbar on the sides-->
+      <div class="header-tablet">
+        <nav class="nav-tablet">
+          <a href="" class="nav-link">Home</a>
+          <a href="" class="nav-link">Highlights</a>
+          <img src="./Arctic-Logo.png" class="logo" alt="Logo">
+          <a href="" class="nav-link">News</a>
+          <a href="" class="nav-link">More</a> 
+        </nav>
+      </div>
+      <!-- Header desktop: logo on the left, navbar on the right-->
+      <div class= "header-desktop">
           <img src="./Arctic-Logo.png" class="logo" alt="Logo">
           <nav class="nav-desktop">
             <a href="" class="nav-link">Home</a> |
@@ -40,17 +51,9 @@
             <a href="" class="nav-link">News</a> |
             <a href="" class="nav-link">More</a> |
           </nav>
-        </div>
-        <div class="header-tablet">
-          <nav class="nav-tablet">
-            <a href="" class="nav-link">Home</a>
-            <a href="" class="nav-link">Highlights</a>
-            <img src="./Arctic-Logo.png" class="logo" alt="Logo">
-            <a href="" class="nav-link">News</a>
-            <a href="" class="nav-link">More</a> 
-          </nav>
-        </div>
-      </header>
+      </div>
+    </header>
+    <!--Big news section-->
       <section class="big-news">
         <div class="container">
           <img class="bignews-image" src="./melting_arctic.jpg" alt="Image decription">
@@ -65,8 +68,8 @@
           </div>
         </div>
       </section>
-
-      <section class="ordinary-news"> <!-- The other news  -->
+    <!-- The other news section -->
+      <section class="ordinary-news"> 
         <div class="container">
           <div class="news">
             <a href="" class="each-news">
@@ -88,27 +91,29 @@
           </div>
         </div>
       </section>
-    <footer class="footer-general">
-      <div class="footer-column">
-        <img src="./Arctic-Logo.png" class="logo-footer" alt="Logo">
-        <div class="somedia-buttons">
-          <a href="" class="fa fa-facebook"></a>
-          <a href="" class="fa fa-twitter"></a>
-          <a href="" class="fa fa-linkedin"></a>
-          <a href="" class="fa fa-instagram"></a>
+    <footer>
+       <!-- Footer links and social media -->
+      <div class="footer-general">
+        <div class="footer-column">
+          <img src="./Arctic-Logo.png" class="logo-footer" alt="Logo">
+          <div class="somedia-buttons">
+            <a href="" class="fa fa-facebook"></a>
+            <a href="" class="fa fa-twitter"></a>
+            <a href="" class="fa fa-linkedin"></a>
+            <a href="" class="fa fa-instagram"></a>
+          </div>
+          <a class="subscribe-button">Subscribe to our newsletter</a>
+        </div> 
+        <div class="footer-column">
+          <h4 class="footer-headline">About us</h4>
+          <div class="footer-list">
+            <a class="footer-link" href="">Contact information</a>
+            <a class="footer-link" href="">History</a>
+            <a class="footer-link" href="">Privacy Policy</a>
+            <a class="footer-link" href="">Coockies</a>
+          </div>
         </div>
-        <button class="subscribe-button">Subscribe to our newsletter</button>
-      </div> 
-      <div class="footer-column">
-        <h4 class="footer-headline">About us</h4>
-        <div class="footer-list">
-          <a class="footer-link" href="">Contact information</a>
-          <a class="footer-link" href="">History</a>
-          <a class="footer-link" href="">Privacy Policy</a>
-          <a class="footer-link" href="">Coockies</a>
-        </div>
-      </div>
-      <div class="footer-column">
+        <div class="footer-column">
         <h4 class="footer-headline">Explore Arctic News</h4>
         <div class="footer-list">
           <a class="footer-link" href="">Arctic shipping</a>
@@ -116,8 +121,12 @@
           <a class="footer-link" href="">Oil and Gas</a>
           <a class="footer-link" href="">Climate and environment</a>
         </div>
+        </div>
       </div>
-   
+      <!-- Footer copyright section -->
+      <div class="footer-copyright">
+        <p class="copyright-text">&#169 2021 "Arctic News" by Ekaterina Klimenko made for Technigo Bootcamp</p>
+      </div>
     </footer>
 
   </body>
