--- a/code/about.html
+++ b/code/about.html
@@ -8,26 +8,30 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 
-<nav class="nav">
-    <input type="checkbox" id="checkbox">
-    <label for="checkbox"><a class="menu-button"></a>
-    </label>
-    <div class="menu-content">
-        <a href="contacts.html" target="blank">contact</a>
-        <a href="index.html" target="blank">home</a>
-        <a href="signup.html" target="blank">sign up</a>
-        <a href="login.html" target="blank">login</a>
-    </div>
-    <div class="search-content">
-        <input type="checkbox" id="searchbox">
-        <label for="searchbox">
-            <img class="search-button" src="../pictures/magnify.png">
+<header class="simple-header">
+    <nav class="nav">
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox"><a class="menu-button"></a>
         </label>
-        <div class="searchbar">
-            <input type="text" placeholder="Search..">
+        <div class="menu-content">
+            <a href="contacts.html" target="blank">contact</a>
+            <a href="about.html" target="blank">about</a>
+            <a href="index.html" target="blank">home</a>
+            <a href="login.html" target="blank">login</a>
         </div>
-    </div>
-</nav>
+        <div class="search-content">
+            <input type="checkbox" id="searchbox">
+            <label for="searchbox">
+                <img class="search-button" src="../pictures/magnify.png">
+            </label>
+            <div class="searchbar">
+                <input type="text" placeholder="Search..">
+            </div>
+        </div>
+    </nav>
+    <div class="logo"><img src="../pictures/logo_space.svg"></div>
+    <div class="logo-simple"><img src="../pictures/logo_space_simple.svg"></div>
+</header>
 
 <footer class="footer">
     <div class="footer-wrapper">
