--- a/code/index.html
+++ b/code/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <style>
+      header {
+        font-family: "Caveat", cursive;
+      }      
+      </style>
   </head>
 
   <body>
     
     <header class="header container">
-      <img class="logo" src="logo.svg">
-      <h1 class="title">Wheeeekly News</h1>
+      <img class="logo" src="/assets/logo.png" alt="Guinea pig logo">
+      <img class="title" src="/assets/title.png" alt="Wheeeekly title image">
       <nav class="navigation">
         <a class="nav link 1" href="">One</a>
         <a class="nav link 2" href="">Two</a>
