Added class to logo in separate html pages. Removed unnecessary code in css file. Adjusted heading in separate html files.

--- a/code/article3.html
+++ b/code/article3.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="articles-header">
-    <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
+    <a href="./index.html"><img class="logo-3" src="./photos/dentnews.png" alt="Dentnews Logo"></a>
   </header>
 
   <section>
