--- a/code/index.html
+++ b/code/index.html
@@ -116,7 +116,7 @@
           <img src="./photos/intraoralscanner.jpg" alt="Picture of an intraoral scanner">
           <div>
             <h3>Intraoral scanners</h3>
-            <p>How to get started with intraoral scanners.</p>
+            <p>How to get started with intraoral scanning.</p>
           </div>
         </a>
       </div>
