--- a/code/about.html
+++ b/code/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="about-header">
-        <a href="./index.html"><img src="./photos/dentnews.png" alt="Dentnews Logo"></a>
+        <a href="./index.html"><img class="logo-3" src="./photos/dentnews.png" alt="Dentnews Logo"></a>
   </header>
 
   <section class="about-container">
