changes in big & small news, and a image added

--- a/code/index.html
+++ b/code/index.html
@@ -15,14 +15,6 @@
 <body>
   <header class="header">
     <!-- Some kind of logo and navbar -->
-    <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
-    <h1>Island Life</h1>
-
-    <nav>
-      <a href="/Accomadation/">Accomadation</a>
-      <a href="/Inspiration/">Inspiration</a>
-      <a href="Contact us/">Contact us</a>
-    </nav>
 
     <div class="hamburger">
       <div></div>
@@ -30,12 +22,23 @@
       <div></div>
     </div>
 
+    <img class=logo src="Summer-Palm-Tree-1-2015060917.svg">
+    <h1>Island Life</h1>
+
+    <nav>
+      <a href="/Accomadation/">Accomadation</a>
+      <a href="/Tours/">Tours</a>
+      <a href="Contact us/">Contact us</a>
+    </nav>
+
+
+
   </header>
 
   <section class="big-news">
     <!-- The big news content -->
     <section class="main-big-news">
-      <img src="nice-life.jpg" alt="cliffs and ocean">
+      <img src="nice-life2.jpg" alt="cliffs and ocean">
       <article class="article">
         <h2>A beautiful life</h2>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
@@ -45,10 +48,7 @@
           pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
           Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. 
           In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. 
-          Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. 
-          Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. 
-          Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. 
-          Aliquam lorem ante, dapibus in, viverra quis, feugiat a.
+
 
         </p>
       </article>
@@ -56,6 +56,7 @@
   </section>
 
   <section class="small-news">
+    <section class="small-news-container"></section>
     <!-- The other news  -->
 
 
