Added hover-color to logo, styling to footer, and favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+    <link rel='icon' href='favicon.ico' type='image/x-icon'/>
   </head>
   <body>
 
@@ -36,7 +37,7 @@
     <section class="big-news">
       <!-- The big news content -->
       <div>  
-        <img src="/images/lightning.jpg" alt="Dark clouds with lightning">
+        <img src="images/lightning.jpg" alt="Dark clouds with lightning">
         <p class="credit">Photo by Francesc Toldrà from freeimages.com</p>
       </div>
       <div>
@@ -85,6 +86,7 @@
     </section>
 
     <footer>
+      <p>&copy; Julia Ros 2021</p>
     </footer>
 
   </body>
