--- a/code/index.html
+++ b/code/index.html
@@ -110,7 +110,7 @@
       </div>
 
       <div class="news-3">
-        <h2><a href="#">Hidden message found in yard</a></h2>
+        <h2><a href="#">Hidden message found</a></h2>
         <img src="images\7.1.jpg" alt="Black cat barely visible in high grass">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
       </div>
