Updated the big-news section with divs and classes

--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,9 @@
     <section class="big-news-container">
       <article>
         <h2>Rubrik</h2>
-        <img src="bild" alt="Bild på en stor nyhet" width="">
+        <div class="img-container-one">
+          <img src="./USA.jpg" alt="Bild på en stor nyhet" width="500px">
+        </div>
         <p>Liten beskrivning av nyheten</p>
       </article>
     </section>
